@@ -1,4 +1,5 @@
-Fixtures = {
+var undef;
+var Fixtures = {
   'one': { 'a': 'A#' },
 
   'many': {
@@ -25,10 +26,3 @@ Fixtures = {
   'value_null':       { 'a':'b', 'c':null },
   'value_zero':       { 'a':'b', 'c':0 }
 };
-
-function returnPair(key, value) {
-  var pair = [key, value];
-  pair.key = key;
-  pair.value = value;
-  return pair;
-}
